--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1018,7 +1018,7 @@ cl_mvm_wave_status_visible_during_wave 1 // MvM wave information during the wave
               // 0 = no graph, 1 = text only, 2 = graph, 3 = legend + choke/loss, 4 = server perf stats
 //net_graphpos 1 // the horizontal position of the netgraph
                  // 0 = left, 1 = right, 2 = middle
-                 // anything else will set the x coordinate of the graph"s left edge
+                 // anything else will set the x coordinate of the graphs left edge
 //net_graphheight 64 // height of the text part of the graph
 //net_graphproportionalfont 1 // scale fonts as the screen resolution goes up
 //net_scale 5 // the height of the graph portion
@@ -1329,7 +1329,7 @@ cl_idealpitchscale 1.3 // When changing pitch, use this rate
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 
 
-echo "mastercomfig version: 6.9.0 | July 14 2018:
+echo "mastercomfig version: 6.9.0 | July 14 2018:"
 
 //con_drawnotify 0 				// Disable drawing notification area
 tf_notifications_push_bottom 1 	// Push notifications to the bottom of the view
