--- a/config.cfg
+++ b/config.cfg
@@ -81,8 +81,9 @@ replay_movie_reveal_warning "0"
 replay_renderqueue_first_add "1"
 replay_quitmsg_dontaskagain "1"
 replay_replayeditor_rewindmsgcounter "1"
-cl_interp_ratio "2"
+cl_interp_ratio "1"
 cl_interp "0.0303"
+glow_outline_effect_enable "0"
 cl_showhelp "0"
 hud_achievement_count "10"
 cl_chatfilter_version "1"
@@ -179,7 +180,7 @@ cl_ask_bigpicture_controller_opt_out "1"
 cl_mainmenu_operation_motd_start "2020-10-12 20:23:27"
 cl_mainmenu_updateglow "0"
 cl_promotional_codes_button_show "0"
-tf_last_store_pricesheet_version "6694"
+tf_last_store_pricesheet_version "52640"
 cl_mvm_wave_status_visible_during_wave "1"
 tf_simple_disguise_menu "1"
 tf_hud_notification_show_count_kart_controls "3"
@@ -187,6 +188,8 @@ tf_hud_notification_show_count_ghost_controls "3"
 tf_hud_notification_show_count_ghost_controls_no_respawn "3"
 tf_hud_show_servertimelimit "1"
 cl_hud_playerclass_playermodel_showed_confirm_dialog "1"
+tf_spec_xray_disable "1"
+tf_enable_glows_after_respawn "0"
 tf_hud_target_id_disable_floating_health "1"
 tf_hud_target_id_show_avatars "0"
 tf_weapon_select_demo_time "0"
@@ -223,7 +226,7 @@ tf_sniper_fullcharge_bell "1"
 cl_crosshairalpha "255"
 tf_explanations_discardpanel "1"
 tf_explanations_store "1"
-sv_skyname "sky_morningsnow_01"
+sv_skyname "sky_dustbowl_01"
 replay_voice_during_playback "1"
 windows_speaker_config "1"
 snd_pitchquality "0"
@@ -241,7 +244,7 @@ r_ambientmin "0.1"
 r_drawmodelstatsoverlaymin "0.01"
 mp_decals "0"
 bugreporter_uploadasync "1"
-rate "60000"
+rate "100000"
 cl_cmdrate "66"
 cl_updaterate "66"
 closecaption "1"
