--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,6 +1,6 @@
-
-//Autoheal, min viewmodels, fastswitch et
 con_enable 1
+con_timestamp "1"
+con_logfile "log.txt"
 ///---
 //FOV
 fov_desired 90
@@ -29,7 +29,6 @@ hud_fastswitch 1
 cl_autoreload 1
 tf_colorblindassist 0
 cl_use_tournament_specgui 1
-cl_hud_playerclass_use_playermodel 1
 cl_disablehtmlmotd 1
 hud_classautokill 1
 tf_medigun_autoheal 1
@@ -67,9 +66,9 @@ spec_autodirector 0 // Choose best view mode automatically
 net_queued_packet_thread 1 // Queue split packets
 net_maxpacketdrop 1000 // Use faster packet drop threshold
 //net_maxpacketdrop 5000 // Use default packet drop threshold
-//net_splitrate 2 // Split 2 packets per frame, reduces choke with a bit of CPU
+net_splitrate 2 // Split 2 packets per frame, reduces choke with a bit of CPU
                 // usage
-net_splitrate 4 // Split 4 packets per frame, reduces choke but is more CPU
+//net_splitrate 4 // Split 4 packets per frame, reduces choke but is more CPU
                   // intensive
 //net_splitrate 1 // Do not split multiple packets for bad CPUs that cannot
                   // handle the extra load
@@ -78,8 +77,8 @@ cl_pred_optimize 2 // Reuse prediction data in case 1, as well as if the
                      // reasonable limits of its own data (case 2)
 cl_lagcompensation 1 // Ensure lag compensation is turned on
 cl_predictweapons 1 // Ensure weapon firing prediction is turned on
-//cl_smooth 1 // Smooth out prediction errors
-cl_smooth 0 // Skip view smoothing operation
+cl_smooth 1 // Smooth out prediction errors
+//cl_smooth 0 // Skip view smoothing operation
 cl_smoothtime 0.1 // Smooth out view for 100ms
 hud_escort_interp 0.1 // Smooth out networked HUD updates over slightly less time
 
@@ -1386,4 +1385,5 @@ tf_hud_target_id_disable_floating_health 1
 sv_cheats 1 // Prevent fog cvar spew in console on startup
 mp_teams_unbalance_limit 0
 sv_allow_point_servercommand always
-rate 100000
+rate 97000
+cl_interp_npcs 0.1
