--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1387,3 +1387,16 @@ mp_teams_unbalance_limit 0
 sv_allow_point_servercommand always
 rate 97000
 cl_interp_npcs 0.1
+
+
+
+//Linux Overrides
+//mat_bumpmap 1
+//mat_phong 1   
+//r_rimlight 1 
+
+//r_rimlight 0 //Mostly stable (some minor issues though)
+
+//unstable on older hardware (dont use)
+//mat_bumpmap 0
+//mat_phong 0 
