--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -251,10 +251,10 @@ r_ambientboost 1 // Boosts reflected light, gives you vision advantage,
 //r_ambientmin 0.3 // Use TF2 default ambient boost threshold
 r_ambientmin 0.1 // Ambient boost less often, realistic darkness
 //r_ambientmin 1.1 // Ambient boost every time
-//r_rimlight 1 // Rimlighting is a distinct design choice in TF2 for better visibility of classes
-r_rimlight 0 // Disable light around character edges, very small FPS increase, rimlight uses GPU only
-//mat_phong 1 // Use a phong shader for shading/reflection
-mat_phong 0 // Disable phong for flatter shading //if your gpu is no existant dont run this trust me
+r_rimlight 1 // Rimlighting is a distinct design choice in TF2 for better visibility of classes
+//r_rimlight 0 // Disable light around character edges, very small FPS increase, rimlight uses GPU only
+mat_phong 1 // Use a phong shader for shading/reflection
+//mat_phong 0 // Disable phong for flatter shading //if your gpu is no existant dont run this trust me
 
 r_lightaverage 0 // Disable this lighting job that uses a lot of CPU even if it is not needed/noticeable
 //r_lightaverage 1 // Enable time averaging of lighting to reduce popping
@@ -699,11 +699,11 @@ mat_filtertextures 1 // Filter textures
 mat_disable_fancy_blending 1 // Disable fancy blending of textures
 //mat_disable_fancy_blending 0 // Enable fancy blending of textures
 
-//mat_bumpmap 1 // Enable bumpmaps
-mat_bumpmap 0 // Disable bumpmap materials
+mat_bumpmap 1 // Enable bumpmaps
+//mat_bumpmap 0 // Disable bumpmap materials
 
-//mat_specular 1 // Enable specular
-mat_specular 0 // Disable specular materials
+mat_specular 1 // Enable specular
+//mat_specular 0 // Disable specular materials
 
 
 // -------------
@@ -1055,7 +1055,7 @@ con_nprint_bgborder 1 // Console border for special debug messages
 // "-- Demo Support --"
 // --------------------
 
-ds_enable 2 // 0 - Manual
+ds_enable 0 // 0 - Manual
               // 1 - Record competitive matchmaking
               // 2 - Record everything
               // 3 - Record mp_tournament matches
@@ -1327,7 +1327,6 @@ cl_idealpitchscale 1.3 // When changing pitch, use this rate
 // ---------------------------------
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 
-echo "  ** mastercomfig 6.9.0 loaded **  "
 echo "⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀  ⣤⣶⣶⣶⣶⣶⣦⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀"
 echo "⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢰⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀"
 echo "⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⢿⣿⣿⡿⣿⣿⣿⣿⣿⣿⣿⣿⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀"
