--- a/config.cfg
+++ b/config.cfg
@@ -77,40 +77,22 @@ bind "MOUSE2" "+attack2"
 bind "MOUSE3" "+attack3"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
-replay_movie_reveal_warning "0"
-replay_renderqueue_first_add "1"
-replay_quitmsg_dontaskagain "1"
-replay_replayeditor_rewindmsgcounter "1"
-cl_interp_ratio "1"
-cl_interp "0.0303"
-glow_outline_effect_enable "0"
+tf_mm_custom_ping_enabled "1"
+tf_mm_custom_ping "175"
+tf_party_join_request_mode "1"
+tf_party_ignore_invites "1"
 cl_showhelp "0"
-hud_achievement_count "10"
-cl_chatfilter_version "1"
-cc_linger_time "1"
-m_pitch "0.022000"
-sensitivity "1.75"
-m_mousespeed "0"
-m_rawinput "1"
-cl_idealpitchscale "1.3"
-net_graphsolid "0"
-zoom_sensitivity_ratio ".793471"
-viewmodel_fov "70"
-mat_viewportscale "1"
-mat_software_aa_strength "0"
-mat_software_aa_strength_vgui "0"
-pyro_vignette "0"
-pyro_vignette_distortion "0"
-pyro_min_intensity "0"
-pyro_max_intensity "0"
-pyro_min_rate "0"
-pyro_max_rate "0"
-pyro_min_side_length "0"
-pyro_max_side_length "0"
-pyro_min_side_width "0"
-pyro_max_side_width "0"
-pyro_dof "0"
-hud_fastswitch "1"
+tf_particles_disable_weather "1"
+tf_use_min_viewmodels "1"
+cl_crosshairalpha "255"
+tf_medigun_autoheal "1"
+hud_medicautocallers "1"
+hud_medicautocallersthreshold "59"
+hud_medichealtargetmarker "1"
+tf_sniper_fullcharge_bell "1"
+cl_interp_ratio "2"
+cl_interp "0"
+cl_spraydisable "0"
 cl_showbackpackrarities "1"
 cl_show_market_data_on_items "0"
 tf_explanations_backpackpanel "1"
@@ -119,8 +101,21 @@ cl_notifications_show_ingame "0"
 cl_notifications_max_num_visible "1"
 cl_notifications_move_time "0.1"
 tf_time_loading_item_panels "0.01"
-cl_spec_mode "6"
+cl_spec_mode "5"
 cl_disablehtmlmotd "1"
+glow_outline_effect_enable "0"
+hud_achievement_count "10"
+cl_chatfilter_version "1"
+cc_linger_time "1"
+m_pitch "0.022000"
+sensitivity "1.35"
+m_mousespeed "0"
+m_rawinput "1"
+cl_idealpitchscale "1.3"
+replay_movie_reveal_warning "0"
+replay_renderqueue_first_add "1"
+replay_quitmsg_dontaskagain "1"
+replay_replayeditor_rewindmsgcounter "1"
 sixense_sensitivity_level "2"
 sixense_aim_freeaim_heading_multiplier "1.750000"
 sixense_aim_freeaim_pitch_multiplier "1.750000"
@@ -130,34 +125,34 @@ sixense_aim_freeaim_max_speed "12.000000"
 sixense_aim_1to1_pitch_multiplier "3.000000"
 sixense_feet_angles_offset_stick_spin_horiz_multiplier "7.500000"
 sixense_feet_angles_offset_stick_spin_vert_multiplier "4.500000"
-tf_remember_activeweapon "1"
-tf_remember_lastswitched "1"
-sb_dontshow_maxplayer_warning "1"
-tf_romevision_skip_prompt "1"
-tf_inspect_hint_count "11"
 fov_desired "90"
 tf_highfive_hintcount "4"
+tf_delete_temp_files "0"
 viewmodel_fov_demo "70"
 tf_hud_no_crosshair_on_scope_zoom "1"
 cl_ask_favorite_opt_out "1"
 cl_ask_blacklist_opt_out "1"
 tf_halloween_bonus_ducks_cooldown "10"
+tf_remember_activeweapon "1"
+tf_remember_lastswitched "1"
+sb_dontshow_maxplayer_warning "1"
+tf_romevision_skip_prompt "1"
+tf_inspect_hint_count "11"
+tf_mvm_tabs_discovered "3"
 tf_coach_request_nevershowagain "1"
 tf_warpaint_explanation_viewed "1"
-ds_enable "2"
 ds_min_streak "2"
 ds_kill_delay "9999999"
 ds_notify "2"
-tf_particles_disable_weather "1"
 hud_combattext_batching "1"
 hud_combattext_batching_window "0.7"
 hud_combattext_red "255.000000"
 hud_combattext_green "1.000000"
 hud_combattext_blue "1.000000"
 tf_dingalingaling "1"
-tf_dingaling_volume "1"
-tf_dingaling_pitchmindmg "75"
-tf_dingaling_pitchmaxdmg "195"
+tf_dingaling_volume "1.000000"
+tf_dingaling_pitchmindmg "75.000000"
+tf_dingaling_pitchmaxdmg "195.000000"
 tf_dingalingaling_lasthit "1"
 tf_dingaling_lasthit_volume "1.000000"
 tf_dingaling_lasthit_pitchmindmg "96.699997"
@@ -180,36 +175,33 @@ cl_ask_bigpicture_controller_opt_out "1"
 cl_mainmenu_operation_motd_start "2020-10-12 20:23:27"
 cl_mainmenu_updateglow "0"
 cl_promotional_codes_button_show "0"
-tf_last_store_pricesheet_version "54474"
+tf_last_store_pricesheet_version "38123"
 cl_mvm_wave_status_visible_during_wave "1"
 tf_simple_disguise_menu "1"
 tf_hud_notification_show_count_kart_controls "3"
 tf_hud_notification_show_count_ghost_controls "3"
 tf_hud_notification_show_count_ghost_controls_no_respawn "3"
 tf_hud_show_servertimelimit "1"
+cl_hud_playerclass_use_playermodel "0"
 cl_hud_playerclass_playermodel_showed_confirm_dialog "1"
 tf_spec_xray_disable "1"
 tf_enable_glows_after_respawn "0"
 tf_hud_target_id_disable_floating_health "1"
 tf_hud_target_id_show_avatars "0"
 tf_weapon_select_demo_time "0"
-tf_use_min_viewmodels "1"
-tf_mm_custom_ping_enabled "1"
-tf_mm_custom_ping "175"
-tf_party_join_request_mode "1"
-tf_party_ignore_invites "1"
-tf_mvm_tabs_discovered "3"
 tf_explanations_charinfo_armory_panel "1"
 tf_explanations_charinfopanel "1"
 tf_show_preset_explanation_in_class_loadout "0"
 tf_show_taunt_explanation_in_class_loadout "0"
 tf_explanations_craftingpanel "1"
 tf_quest_notification_line_delay "0.2"
+tf_explanations_store "1"
 tf_show_maps_details_explanation_count "0"
 tf_mvm_classupgradehelpcount "3"
 tf_scoreboard_mouse_mode "2"
 tf_scoreboard_ping_as_text "1"
 tf_scoreboard_alt_class_icons "1"
+tf_explanations_discardpanel "1"
 tf_mm_dashboard_slide_panel_step "10"
 tf_casual_welcome_hide "1"
 tf_comp_welcome_hide "1"
@@ -218,38 +210,48 @@ tf_chat_popup_hold_time "4"
 tf_quest_map_intro_viewed "1"
 cl_use_tournament_specgui "1"
 cl_training_completed_with_classes "511"
-tf_medigun_autoheal "1"
-hud_medicautocallers "1"
-hud_medicautocallersthreshold "59"
-hud_medichealtargetmarker "1"
-tf_sniper_fullcharge_bell "1"
-cl_crosshairalpha "255"
-tf_explanations_discardpanel "1"
-tf_explanations_store "1"
-sv_skyname "sky_dustbowl_01"
+net_graphsolid "0"
+zoom_sensitivity_ratio ".793471"
+viewmodel_fov "70"
+mat_viewportscale "1"
+mat_software_aa_strength "0"
+mat_software_aa_strength_vgui "0"
+pyro_vignette "0"
+pyro_vignette_distortion "0"
+pyro_min_intensity "0"
+pyro_max_intensity "0"
+pyro_min_rate "0"
+pyro_max_rate "0"
+pyro_min_side_length "0"
+pyro_max_side_length "0"
+pyro_min_side_width "0"
+pyro_max_side_width "0"
+pyro_dof "0"
+hud_fastswitch "1"
+sv_skyname "sky_morningsnow_01"
 replay_voice_during_playback "1"
-windows_speaker_config "1"
 snd_pitchquality "0"
-volume "0.060000"
-snd_musicvolume "0.090000"
+volume "0.110000"
+snd_musicvolume "0.110000"
 snd_mixahead "0.066"
-name "well"
-sv_unlockedchapters "99"
-cl_showpluginmessages "1"
+name "JuKnix"
+bugreporter_uploadasync "1"
 cl_timeout "60"
 cl_logofile "materials/vgui/logos/spray.vtf"
+rate "97000"
+cl_cmdrate "66"
+cl_updaterate "66"
+sv_unlockedchapters "99"
+cl_showpluginmessages "1"
 con_enable "1"
+closecaption "1"
 r_eyemove "0"
 r_ambientmin "0.1"
 r_drawmodelstatsoverlaymin "0.01"
 mp_decals "0"
-bugreporter_uploadasync "1"
-rate "100000"
-cl_cmdrate "66"
-cl_updaterate "66"
-closecaption "1"
 net_maxroutable "1200"
 r_rootlod "1"
+mat_forceaniso "2"
 mat_picmip "-1"
 mat_monitorgamma "1.6"
 mat_antialias "1"
